test/fails/bad_parsing/bad_function8.lgl
int f(int x y) { //Huh?
    return 0;
}

void main() {
    return;
}